--- a/src/main/resources/static/api.html
+++ b/src/main/resources/static/api.html
@@ -6,25 +6,26 @@
     <script src='jquery-3.3.1.min.js' type='text/javascript'></script>
     <style>
         p:hover{
-            color:#fff;
+            color:#cce8cf;
         }
     </style>
 </head>
 <body style="margin:0;padding:0;">
-<div style="width:100%;height:54px;background-color:#001230;border-bottom:1px solid #cce8cf;">
-    <div style="float:left;text-align:left;font-size:23px;color:#cce8cf;padding-top:13px;padding-left:30px;">
-        <span>LOGO</span> 接口详情页面
+<div style="width:100%;height:54px;background-color:#001230;border-bottom:1px solid #fff;">
+    <div style="float:left;text-align:left;font-size:23px;color:#fff;padding-top:13px;padding-left:30px;">
+        <span>当前项目名称:</span> <span id="apititle">接口详情页面</span>
     </div>
-    <div style="float:right;width:70%;text-align:right;margin-top:34px;font-size:14px;color:#cce8cf;">
+    <div style="float:right;width:70%;text-align:right;margin-top:34px;font-size:14px;color:#fff;">
         <span>生成工具:&nbsp;SWAGGER</span>&nbsp;&nbsp;
         <span>版本:&nbsp;2.0</span>&nbsp;&nbsp;
-        <span>HOST:&nbsp;<span id="host"></span></span>&nbsp;&nbsp;
-        <span>BASEPATH:&nbsp;<span id="basepath"></span></span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>接口地址前缀:&nbsp;<span id="host"></span></span>&nbsp;&nbsp;
+        <span>接口项目根地址:&nbsp;<span id="basepath"></span></span>&nbsp;&nbsp;&nbsp;&nbsp;
+        <span>推荐测试工具:&nbsp;<span></span>POSTMAN</span>&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 </div>
-<div style="background-color:black;height:calc(100vh - 55px);width:calc(100vw);">
-    <div style="width:229px;height:100%;float:left;border-right:1px solid #cce8cf;color:#cce8cf;" id="left_menu"></div>
-    <div style="width:calc(100vw - 230px);height:calc(100vh - 55px);float:right;color:#cce8cf;" id="center_body">
+<div style="background-color:#262626;height:calc(100vh - 55px);width:calc(100vw);">
+    <div style="width:229px;height:100%;float:left;border-right:1px solid #fff;color:#fff;" id="left_menu"></div>
+    <div style="width:calc(100vw - 230px);height:calc(100vh - 55px);float:right;color:#fff;" id="center_body">
         <span>
             请求方式&nbsp;&nbsp;&nbsp;
             /&nbsp;&nbsp;&nbsp;
@@ -33,20 +34,6 @@
             方法简述&nbsp;&nbsp;&nbsp;
             /&nbsp;&nbsp;&nbsp;
             请求数据类型</span>
-        <!--<div style="width:100%;margin-top:15px;">-->
-            <!--<div style="border-bottom:1px solid #0012ff;height:30px;">-->
-                <!--<span style="height:30px;background: #0012ff;padding: 9px 15px;"><font style="size:20px;">GET</font></span>-->
-                <!--&nbsp;&nbsp;&nbsp;-->
-                <!--<span>http://www.baidu.com</span>-->
-                <!--<span>方法说明</span>-->
-            <!--</div>-->
-            <!--<div style="min-height:50px;">-->
-                <!--<span>请求信息</span>-->
-            <!--</div>-->
-            <!--<div style="min-height:50px;">-->
-                <!--<span>返回信息</span>-->
-            <!--</div>-->
-        <!--</div>-->
     </div>
 </div>
 <script>
@@ -68,9 +55,10 @@
                 //请求成功时处理
                 $('#host').text(req.host);
                 $('#basepath').text(req.basePath);
+                $('#apititle').text(req.info.title);
                 $(req.tags).each(function(index,e){
                     $('#left_menu').append('<div onclick="click_get_tags(this)" style="background-color:#000f27;padding: 15px 25px;border-bottom:1px solid #496590;'
-                                            +'color:#cce8cf;cursor:pointer;">'
+                                            +'color:#fff;cursor:pointer;">'
                                             +'<p style="margin:0;">'+e.description+'</br>'
                                             +'<span style="font-size:14px;">'+e.name+'</span>'
                                             +'</p>'
@@ -113,10 +101,10 @@
                             <!--请求参数数量类型等-->
                             var par = '';
                             $(value2.parameters).each(function(pindex,pe){
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数名称：</span><span>'+pe.name+'</span>';
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数位置：</span><span>'+pe.in+'</span>';
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数说明：</span><span>'+pe.description+'</span>';
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">是否必填：</span><span>'+pe.required+'</span><br />';
+                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数名称：</span><span style="color:#ff00f6">'+pe.name+'</span>';
+                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数位置：</span><span style="color:#ff00f6">'+pe.in+'</span>';
+                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数说明：</span><span style="color:#ff00f6">'+pe.description+'</span>';
+                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">是否必填：</span><span style="color:#ff00f6">'+pe.required+'</span><br />';
                             });
 
                             var h = '<div style="width:100%;margin-top:15px;">'
@@ -129,14 +117,14 @@
                                    +'         <span>'+value2.summary+'</span>'
                                    +'         &nbsp;&nbsp;&nbsp;'
                                    +'         &nbsp;&nbsp;&nbsp;'
-                                   +'         <span>'+value2.consumes+'</span>'
+                                   +'         <span style="color:#6a00ff">'+value2.consumes+'</span>'
                                    +'     </div>'
                                    +'     <div style="min-height:50px;">'
-                                   +'         <span>请求信息</span><br />'
+                                   +'         <span style="color:#62458a">请求信息</span><br />'
                                    + par
                                    +'     </div>'
                                    +'     <div style="min-height:50px;">'
-                                   +'         <span>返回信息</span>'
+                                   +'         <span style="color:#62458a">返回信息</span>'
                                    +'     </div>'
                                    +' </div>';
                             $('#center_body').append(h);
