--- a/src/main/resources/static/api.html
+++ b/src/main/resources/static/api.html
@@ -5,17 +5,20 @@
     <title>接口说明</title>
     <script src='jquery-3.3.1.min.js' type='text/javascript'></script>
     <style>
+        *{
+            color:#ff8800;
+        }
         p:hover{
             color:#cce8cf;
         }
     </style>
 </head>
 <body style="margin:0;padding:0;">
-<div style="width:100%;height:54px;background-color:#001230;border-bottom:1px solid #fff;">
-    <div style="float:left;text-align:left;font-size:23px;color:#fff;padding-top:13px;padding-left:30px;">
+<div style="width:100%;height:54px;background-color:#331d03;border-bottom:1px solid #1c0f00;">
+    <div style="float:left;text-align:left;font-size:23px;padding-top:13px;padding-left:30px;">
         <span>当前项目名称:</span> <span id="apititle">接口详情页面</span>
     </div>
-    <div style="float:right;width:70%;text-align:right;margin-top:34px;font-size:14px;color:#fff;">
+    <div style="float:right;width:70%;text-align:right;margin-top:34px;font-size:14px;">
         <span>生成工具:&nbsp;SWAGGER</span>&nbsp;&nbsp;
         <span>版本:&nbsp;2.0</span>&nbsp;&nbsp;
         <span>接口地址前缀:&nbsp;<span id="host"></span></span>&nbsp;&nbsp;
@@ -24,8 +27,8 @@
     </div>
 </div>
 <div style="background-color:#262626;height:calc(100vh - 55px);width:calc(100vw);">
-    <div style="width:229px;height:100%;float:left;border-right:1px solid #fff;color:#fff;" id="left_menu"></div>
-    <div style="width:calc(100vw - 230px);height:calc(100vh - 55px);float:right;color:#fff;" id="center_body">
+    <div style="width:229px;height:100%;float:left;border-right:1px solid #1c0f00;" id="left_menu"></div>
+    <div style="width:calc(100vw - 230px);height:calc(100vh - 55px);float:right;" id="center_body">
         <span>
             请求方式&nbsp;&nbsp;&nbsp;
             /&nbsp;&nbsp;&nbsp;
@@ -57,8 +60,8 @@
                 $('#basepath').text(req.basePath);
                 $('#apititle').text(req.info.title);
                 $(req.tags).each(function(index,e){
-                    $('#left_menu').append('<div onclick="click_get_tags(this)" style="background-color:#000f27;padding: 15px 25px;border-bottom:1px solid #496590;'
-                                            +'color:#fff;cursor:pointer;">'
+                    $('#left_menu').append('<div onclick="click_get_tags(this)" style="background-color:#331d03;padding: 15px 25px;border-bottom:1px solid #1c0f00;'
+                                            +'cursor:pointer;">'
                                             +'<p style="margin:0;">'+e.description+'</br>'
                                             +'<span style="font-size:14px;">'+e.name+'</span>'
                                             +'</p>'
@@ -101,30 +104,30 @@
                             <!--请求参数数量类型等-->
                             var par = '';
                             $(value2.parameters).each(function(pindex,pe){
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数名称：</span><span style="color:#ff00f6">'+pe.name+'</span>';
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数位置：</span><span style="color:#ff00f6">'+pe.in+'</span>';
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">参数说明：</span><span style="color:#ff00f6">'+pe.description+'</span>';
-                                par += '&nbsp;&nbsp;<span style="color:'+qqfs+'">是否必填：</span><span style="color:#ff00f6">'+pe.required+'</span><br />';
+                                par += '&nbsp;&nbsp;<span>参数名称：</span><span style="color:#ff00f6">'+pe.name+'</span>';
+                                par += '&nbsp;&nbsp;<span>参数位置：</span><span style="color:#ff00f6">'+pe.in+'</span>';
+                                par += '&nbsp;&nbsp;<span>参数说明：</span><span style="color:#ff00f6">'+pe.description+'</span>';
+                                par += '&nbsp;&nbsp;<span>是否必填：</span><span style="color:#ff00f6">'+pe.required+'</span><br />';
                             });
 
                             var h = '<div style="width:100%;margin-top:15px;">'
                                    +'     <div style="border-bottom:1px solid '+qqfs+';height:30px;">'
                                    +'         <span style="height:30px;background: '+qqfs+';padding: 9px 15px;"><font style="size:20px;">'+key2+'</font></span>'
                                    +'         &nbsp;&nbsp;&nbsp;'
-                                   +'         <span style="color:'+qqfs+'">'+key+'</span>'
+                                   +'         <span>'+key+'</span>'
                                    +'         &nbsp;&nbsp;&nbsp;'
                                    +'         &nbsp;&nbsp;&nbsp;'
                                    +'         <span>'+value2.summary+'</span>'
                                    +'         &nbsp;&nbsp;&nbsp;'
                                    +'         &nbsp;&nbsp;&nbsp;'
-                                   +'         <span style="color:#6a00ff">'+value2.consumes+'</span>'
+                                   +'         <span>'+value2.consumes+'</span>'
                                    +'     </div>'
                                    +'     <div style="min-height:50px;">'
-                                   +'         <span style="color:#62458a">请求信息</span><br />'
+                                   +'         <span>请求信息</span><br />'
                                    + par
                                    +'     </div>'
                                    +'     <div style="min-height:50px;">'
-                                   +'         <span style="color:#62458a">返回信息</span>'
+                                   +'         <span>返回信息</span>'
                                    +'     </div>'
                                    +' </div>';
                             $('#center_body').append(h);
