增加自定义接口说明页面

--- a/src/main/resources/static/api.html
+++ b/src/main/resources/static/api.html
@@ -9,12 +9,12 @@
             color:#ff8800;
         }
         p:hover{
-            color:#cce8cf;
+            color:#fcaf51;
         }
     </style>
 </head>
-<body style="margin:0;padding:0;">
-<div style="width:100%;height:54px;background-color:#331d03;border-bottom:1px solid #1c0f00;">
+<body style="margin:0;padding:0;background-color:#1a0f01;">
+<div style="width:100%;height:54px;border-bottom:1px solid #fcaf51;">
     <div style="float:left;text-align:left;font-size:23px;padding-top:13px;padding-left:30px;">
         <span>当前项目名称:</span> <span id="apititle">接口详情页面</span>
     </div>
@@ -26,9 +26,9 @@
         <span>推荐测试工具:&nbsp;<span></span>POSTMAN</span>&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 </div>
-<div style="background-color:#262626;height:calc(100vh - 55px);width:calc(100vw);">
-    <div style="width:229px;height:100%;float:left;border-right:1px solid #1c0f00;" id="left_menu"></div>
-    <div style="width:calc(100vw - 230px);height:calc(100vh - 55px);float:right;" id="center_body">
+<div style="height:calc(100vh - 55px);min-width:1400px;">
+    <div style="width:229px;height:100%;float:left;border-right:1px solid #fcaf51;" id="left_menu"></div>
+    <div style="min-width:1040px;height:calc(100vh - 55px);float:left;" id="center_body">
         <span>
             请求方式&nbsp;&nbsp;&nbsp;
             /&nbsp;&nbsp;&nbsp;
